Fixed banner image stretch

--- a/src/documents/styles/post.css.less
+++ b/src/documents/styles/post.css.less
@@ -8,11 +8,15 @@
 
 	.banner {
 		position: relative;
-		img {
-			width: 100%;
+
+		.background-strip {
+			display: block;
+			background: #5d9cec none 50% 50% no-repeat; // set up for per-article banner background
+			background-size: cover;
+
 			height: 370px;
-			background-color: #5d9cec;
 		}
+
 		h1 {
 			font-family: Plantin;
 			font-weight: bold;
@@ -36,7 +40,7 @@
 
 	h1, .content {
 		position: relative;
-		top: -116px;
+		top: -110px;
 		margin: 0 auto;
 	}
 
